[project]
name = "backend"
version = "0.1.0"

dependencies = [
    "fastapi>=0.101.0",
    "uvicorn[standard]>=0.23.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true
